# Chess-Engine

./: CMakeLists.txt  main.cpp
Game/: board.cpp  board.h  pieces.cpp  pieces.h
Window/: window.cpp  window.h
doc/: board_pseudo.md
include/: board.h  pieces.h  window.h
src/: board.cpp  main.cpp  pieces.cpp  window.cpp
